--- a/static/css/optimizer/progress.css
+++ b/static/css/optimizer/progress.css
@@ -117,7 +117,7 @@
         transparent 25%, 
         transparent 50%, 
         rgba(255,255,255,0.15) 50%, 
-        rgba(255,255,255,0.15) 75%, 
+        red 75%, 
         transparent 75%, 
         transparent);
     background-size: 1rem 1rem;
